--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,7 @@
     />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>王阔简历</title>
+    <link rel="stylesheet" href="stle.css" />
   </head>
   <body>
     <style id="style"></style>
@@ -16,55 +17,6 @@
       <div id="div1"></div>
     </div>
 
-    <style>
-      * {
-        margin: 0;
-        padding: 0;
-        box-sizing: border-box;
-      }
-      #div1::before {
-        box-sizing: border-box;
-      }
-      #div1::after {
-        box-sizing: border-box;
-      }
-      #demo {
-        word-break: break-all;
-      }
-      #div1 {
-        position: fixed;
-        left: 50%;
-        transform: translateX(-50%);
-        top: 20px;
-      }
-      #div1::before {
-        content: "";
-        display: block;
-        position: absolute;
-      }
-      #div1::after {
-        content: "";
-        display: block;
-        position: absolute;
-      }
-
-      @media (max-width: 500px) {
-        #html {
-          height: 50vh;
-          overflow: auto;
-        }
-
-        #div1Wrapper {
-          height: 50vh;
-        }
-
-        #div1 {
-          position: relative;
-          top: 0;
-          right: 0;
-        }
-      }
-    </style>
     <script src="main.js"></script>
   </body>
 </html>
