--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
     />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>王阔简历</title>
-    <link rel="stylesheet" href="stle.css" />
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <style id="style"></style>
